--- a/src/sweetrs/recommender/templates/recommender/product.add.html
+++ b/src/sweetrs/recommender/templates/recommender/product.add.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 {% block content %}
-    <h2>Add photo</h2>
-    Please provide photos with white background - it really looks much nicer :)
+    <h2>{% trans "Add photo" %}</h2>
+    {% trans "Please provide photos with white background - it really looks much nicer :)" %}
     <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
     <table>
     {{ form.as_table }}
-    <tr><td></td><td><input type="submit" value="Add" /></td></tr>
+    <tr><td></td><td><input type="submit" value="{% trans "Add" %}" /></td></tr>
     </table>
     </form>
 {% endblock %}
