--- a/src/sweetrs/recommender/templates/recommender/recommends.html
+++ b/src/sweetrs/recommender/templates/recommender/recommends.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 {% block content %}
     <style>
         tr.big-diff td {
@@ -28,20 +28,19 @@
     }
     </style>
     {% load thumbnail %}
-    <h3>Users</h3>
-    Your tau correlation coefficients with other sweetrs users. I will give some details later, right now you can read
-    something on <a href="http://en.wikipedia.org/wiki/Pearson_correlation">wikipedia</a>.
+    <h3>{% trans "Users" %}</h3>
+    {% trans "Your tau correlation coefficients with other sweetrs users. I will give some details later, right now you can read something on <a href='http://en.wikipedia.org/wiki/Pearson_correlation'>wikipedia</a>." %}
     <table id="users">
     <thead>
     <tr>
-        <th>User</th>
-        <th>Your correlation with this user</th>
+        <th>{% trans "User" %}</th>
+        <th>{% trans "Your correlation with this user" %}</th>
     </tr>
     </thead>
     <tbody>
     {% for item in users_with_corr %}
         <tr class="">
-            <td><img src="https://graph.facebook.com/{{ item.get_profile.uid }}/picture"/></td>
+            <td>{{ item.id }}</td>
             <td>{{ item.tau|floatformat:4 }}</td>
         </tr>
     {% endfor %}
@@ -63,16 +62,16 @@
         </form>
     </div>
     <div style="clear: both;"><br /></div>
-    <h3>Ratings</h3>
-    Currently I predict rating as weighted sum of other users ratings, where weights are just correlation coefficients (normalized).
+    <h3>{% trans "Ratings" %}</h3>
+    {% blocktrans %}Currently I predict rating as weighted sum of other users ratings, where weights are just correlation coefficients (normalized).
     More details will be shown later.<br />
-    Red background is just for noticing big mistake made by algorithm i.e. if predicted value differates "too much" with your rank.
+    Red background is just for noticing big mistake made by algorithm i.e. if predicted value differates "too much" with your rank.{% endblocktrans %}
     <table id="products">
     <thead>
     <tr>
-        <th>Product</th>
-        <th>Your rate</th>
-        <th>Prediction</th>
+        <th>{% trans "Product" %}</th>
+        <th>{% trans "Your rate" %}</th>
+        <th>{% trans "Prediction" %}</th>
     </tr>
     </thead>
     <tbody>
