--- a/src/sweetrs/recommender/templates/recommender/recommends.html
+++ b/src/sweetrs/recommender/templates/recommender/recommends.html
@@ -29,7 +29,7 @@
     </style>
     {% load thumbnail %}
     <h3>{% trans "Users" %}</h3>
-    {% trans "Your tau correlation coefficients with other sweetrs users. I will give some details later, right now you can read something on <a href='http://en.wikipedia.org/wiki/Pearson_correlation'>wikipedia</a>." %}
+    <!-- {% trans "Your tau correlation coefficients with other sweetrs users. I will give some details later, right now you can read something on <a href='http://en.wikipedia.org/wiki/Pearson_correlation'>wikipedia</a>." %}
     <table id="users">
     <thead>
     <tr>
@@ -61,7 +61,7 @@
             </select>
         </form>
     </div>
-    <div style="clear: both;"><br /></div>
+    <div style="clear: both;"><br /></div> -->
     <h3>{% trans "Ratings" %}</h3>
     {% blocktrans %}Currently I predict rating as weighted sum of other users ratings, where weights are just correlation coefficients (normalized).
     More details will be shown later.<br />
