--- a/src/sweetrs/templates/flatpages/about.html
+++ b/src/sweetrs/templates/flatpages/about.html
@@ -1,6 +1,6 @@
 ﻿{% extends "base.html" %}{% load i18n %}
 {% block content %}
-    <div style="text-align: right;"><i>
+    <a href="http://en.wikipedia.org/wiki/Muffin"><img src="{{ MEDIA_URL }}/gfx/muffin.jpg" style="float: left;" /></a><div style="text-align: right;"><i>
 “{% trans "C is for cookie, it's good enough for me,<br />oh cookie cookie cookie starts with C." %}” </i><br />
 {% trans "Cookie monster" %}
 </div>
@@ -37,6 +37,17 @@ I'm working on my master's thesis right now which is the recommender system.{% e
         
     <h2>{% trans "Do you like it? Click 'LIKE'!" %}</h2>
     {% trans "It will help me in promoting this application." %}<br /><br />
-    <fb:like-box href="http://www.facebook.com/apps/application.php?id=199954626696783" width="292" show_faces="true" stream="false" header="false"></fb:like-box>
+	<!-- AddThis Button BEGIN -->
+	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+	<a class="addthis_button_preferred_1"></a>
+	<a class="addthis_button_preferred_2"></a>
+	<a class="addthis_button_preferred_3"></a>
+	<a class="addthis_button_preferred_4"></a>
+	<a class="addthis_button_compact"></a>
+	<a class="addthis_counter addthis_bubble_style"></a>
+	</div>
+	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e69007722666d90"></script>
+	<!-- AddThis Button END -->
+
     </div>
 {% endblock %}
