--- a/src/sweetrs/templates/flatpages/about.html
+++ b/src/sweetrs/templates/flatpages/about.html
@@ -21,7 +21,7 @@ I'm working on my master's thesis right now which is the recommender system.{% e
     {% trans "find out which new sweets you'd like. Enjoy them or not and give me feedback afterwards :)" %}
 
     <h2>{% trans "What do I need?" %}</h2>
-    {% trans "In order to build reliable system I need at least:<br />500 users and about 10000 marks" %}
+    {% trans "In order to build reliable system I need at least:<br />500 users and about 10000 marks. <strong>But of course the more the better!</strong>" %}
 
     <h2>{% trans "So far..." %}</h2>
     <strong>{{ users }} / 500</strong> {% trans "users contributed" %}<br />
